* (bug 13428) Fix regression in protection form layout HTML validity
* (bug 9403) Sanitize newlines from search term input
* (bug 13429) Separate date and time in message sp-newimages-showfrom
* (bug 13137) Allow setting 'editprotected' right separately from 'protect', 	 
  so groups may optionally edit protected pages without having 'protect' perms


=== API changes in 1.13 ===

* Fixing main page display in meta=siteinfo
* (bug 13128) Added patrolled flag to list=recentchanges
* Implemented {bl,ei,iu}redirect (lists links through redirects as well)
* (bug 13154) Introduced subpages flag to meta=siteinfo&siprop=namespaces
* (bug 13157) Added ucuserprefix parameter to list=usercontibs
* (bug 12394) Added rctitles parameter to list=recentchanges, making rcid
  retrieval easier
* (bug 13218) Fix inclusion of " character in hyperlinks
* Added watch and unwatch parameters to action=delete and action=move
* Added action=edit
* (bug 11401) Added xmldoublequote to xml formatter
* Added rvsection parameter to prop=revisions to allow fetching the content of
  a certain section only
* Introduced list=allimages
* (bug 13371) Build page set from image hashes
* Mark non-existent messages in meta=allmessages as missing
* (bug 13390) One invalid title no longer kills an entire API query
* (bug 13419) Fix gblredirect so it actually works
* (bug 13418) Disable eiredirect because it's useless
* (bug 13395) list=allcategories should use category table
* (bug 13442) Missing pages in prop=langlinks and prop=extlinks are now 
  handled properly.
* (bug 13444) Add description to list=watchlist

=== Languages updated in 1.13 ===

* Afrikaans (af)
* Gheg Albanian (aln)
* Amharic (am)
* Aragonese (an)
* Arabic (ar)
* Asturian (ast)
* Kotava (avk)
* Samogitian (bat-smg)
* Bulgarian (bg)
* Catalan (ca)
* Crimean Turkish (Cyrillic) (crh-cyrl)
* Crimean Turkish (Latin) (crh-latn)
* Czech (cs)
* Welsh (cy)
* Danish (da)
* Lower Sorbian (dsb)
* Greek (el)
* Esperanto (eo)
* Spanish (es)